Finding DOCNO and TEXT elements for FR94 Documents